<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">LED matrix control</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="draw">Draw</string>
    <string name="simple_drawing">Simple Drawing</string>
    <string name="choose_device">Choose Matrix</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error_occurreden">An exception occurred!</string>
    <string name="ok">@android:string/ok</string>
    <string name="sp_last_connected_device" translatable="false">last_connected_matrix</string>
    <string name="print_tester_debug">Echo test (debug)</string>
    <string name="enter_text_for_sending_to_server">enter text for sending to server</string>
    <string name="send">Send</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camera">Camera</string>
    <string name="load_specific_script">load specific script</string>
    <string name="echo_test">echo test</string>
    <string name="reboot_rpi">reboot rpi</string>
    <string name="notice">Notice</string>
    <string name="no_warnings">All commands will be executed without warning.</string>
    <string name="administration">Administration</string>
    <string name="reconnect">reconnect</string>
    <string name="connect">connect</string>
    <string name="connect_confirmation_message">%s will be automatically connected to when available.</string>
    <string name="load">load</string>
    <string name="refreshing_scripts">refreshing scripts</string>
    <string name="manual_script_load">Manual script load</string>
    <string name="refresh">Refresh</string>
    <string name="shut_down_rpi">shut down RPI</string>
    <string name="scrolling_text">Scrolling text</string>
    <string name="scrolling_speed">Scrolling speed</string>
    <string name="choose_color">choose color</string>
    <string name="send_text">send text</string>
    <string name="font_size">Font size</string>
    <string-array translatable="false" name="available_wakeup_durations">
        <item>15min</item>
        <item>30min</item>
        <item>45min</item>
        <item>60min</item>
    </string-array>
    <string name="searching_for_devices">Searching for Matrices</string>
    <string name="connect_to_device_question">Connect to Matrix?</string>
    <string name="device_denied_connection_request_msg">The Matrix did not accept your connection request</string>
    <string name="device_denied_connection_request_title">Matrix denied connection</string>
    <string name="restart_device_control">restart Matrix control</string>
    <string name="view_device_log">View Matrix Log</string>
    <string name="err_could_not_communicate">Could not communicate with Matrix</string>
    <string name="wordclock_color_selection">Wordclock colors</string>
    <string name="color_copied">Color copied</string>
    <string name="loading_wordclock_configuration">Loading LedMatrix configuration…</string>
    <string name="device_communication_error">Led matrix communication error! Please restart the app.</string>
    <string name="randomize_colors">Randomize colors</string>
    <string name="enable_display_at">Enable display at %d o\'clock</string>
    <string name="disable_display_at">Disable display at %d o\'clock</string>
    <string name="enable_display_time_limits">Enable display time limits</string>
    <string name="wordclock_settings">Wordclock settings</string>
    <string name="randomly_choose_colors">Random colors</string>
    <string name="about">About</string>
    <string name="about_text">Developed by enra64 and gSilas on github.\\n\\nThanks to Pavel Sikun for his VintageChroma library under the Apache v2 license!\\n\\nThanks to Josef Raska for his Console library, also under Apache v2.  See http://www.apache.org/licenses/LICENSE-2.0.</string>
    <string name="send_feedback">Send feedback</string>
    <string name="connected_to">\"Connected to \"</string>
    <string name="lost_connection">" has stopped"</string>
    <string name="wake_up_light">Wake up light</string>
    <string name="multiple_retries_failed">Multiple tries to re-establish the connection to the matrix have failed. Please upgrade your wifi-setup :(</string>
    <string name="connection_failed">Connection failed</string>
    <string-array name="randomization_intervals">
        <item>Hourly</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
</resources>
