<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.oerntec.matledcontrol.script_clients.AdministrationFragment">

    <!-- TODO: Update blank fragment layout -->

    <com.jraska.console.Console
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline8"
        android:layout_marginRight="8dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline8"
        app:layout_constraintGuide_percent="0.66"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="295dp"
        tools:layout_editor_absoluteX="0dp" />

    <ScrollView
        android:layout_width="311dp"
        android:layout_height="287dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/admin_reboot_rpi_button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/reboot_rpi" />

            <Button
                android:id="@+id/admin_echo_test_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/echo_test" />

            <Button
                android:id="@+id/admin_shutdown_rpi_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shut_down_rpi" />

            <Button
                android:id="@+id/admin_restart_matrix_control"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/restart_matrix_control" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
